k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-api
  namespace: personal-website-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-website-api
  template:
    metadata:
      labels:
        app: personal-website-api
    spec:
      containers:
        - name: personal-website-api
          image: klutzer/personal-website-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi
      imagePullSecrets:
          - name: regcred
