k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: personal-website-api
