k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-personal-website-api
  namespace: personal-website-api
  annotations:
   cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
   - hosts:
     - api.kevin.lutzer.ca
     secretName: letsencrypt-nginx-personal-website-api
  rules:
    - host: api.kevin.lutzer.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website-api
                port:
                  number: 80
  ingressClassName: nginx
